public/src/SCSS/document.scss
@import "reset";
@import "theme";
@import "nav";
@import "footer";

#body{
  padding: 25px 40px;

  .notification{
    margin-bottom: 15px;
  }

  .collection{
    font-size: 1.3rem;
  }

  .text{
    white-space: nowrap;
  }

  .steps-content p{
    margin-top: 2px;
  }

  h3{
    margin-bottom: 2px;
  }

}

